2014-04-16  horneds

	* Django: ManyToManyField is not generated by default

2014-02-10  horneds

	* Version 2.3.0
	* Added beta support for guards
	    # Works like "get or create user with username='root'"
	    root = mixer.guard(username='root').blend('auth.user')

2014-02-09  horneds

	* Version 2.2.0
	* Added 'silence' param to mixer initialization
	    with mixer.ctx(silence=True):
	        # No errors will be raised
		user = mixer.blend('auth.User', username='mike')
		null = mixer.blend('auth.User', username='mike')
		

2014-01-03  horneds

	* Version 2.1.0
	* Updated support for django content_types

2013-12-31  horneds

	* Version 2.0.0
	* 'mixer.random', 'mixer.fake', 'mixer.select', 'mixer.mix',
	'mixer.f', 'mixer.g' -- are depricated use them in UPPERCASE ('mixer.RANDOM' and etc)
	* Added 'mixer.SKIP' attribute for skipping a value generation

2013-12-27  horneds

	* Support context (redefine mixer params as context)
	* Version 1.6.0

2013-11-25  horneds

	* Version 1.5.1
	* Fixed builtin types generation

2013-11-22  horneds

	* Version 1.5.0
	* Django ContentTypes integration was be upgraded

2013-11-21  horneds

	* Version 1.4.0
	* Now postprocess working before save

2013-11-15  horneds

	* Version 1.3.0
	* Added postprocess param to mixer.register method
	* Added gen_simple_username faker

2013-09-22  horneds

	* Version 1.1.6
	* Bugfix release

2013-09-18  horneds

	* Version 1.1.4
	* Fix MongoEngine backend (c) Kirill Pavlov
	* By default mongoengine save models in database

2013-09-11  horneds

	* Version 1.1.2
	* SQLAlchemy bugfix

2013-09-06  horneds

	* Version 1.1.1
	* `mixer.register` could pinned just a values to field

2013-09-05  horneds

	* Version 1.0.0
	* Added `mixer.register` method (register custom generators for fields)

2013-09-04  horneds

	* Version 0.11.3
	* Fixed Django m2m

2013-08-21  horneds

	* Version 0.11.2
	* Minor changes

2013-07-31  horneds

	* Version 0.11.1