@@ -1,6 +1,8 @@
 2014-04-16  horneds
 
 	* Django: ManyToManyField is not generated by default
+	* Change mixer.register syntax (See README)
+	* Instead postprocess Mixer now supports middleware decorators (See README)
 
 2014-02-10  horneds
 
